<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <RelativeLayout style="@style/Title"
        android:background="@color/bg">
        <include layout="@layout/layout_back"></include>

        <TextView
            android:id="@+id/contact_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="联系我们"
            android:textColor="@color/white"
            android:textSize="@dimen/text_large" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_alignParentBottom="true"
            android:background="@color/xian"></View>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/bg1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="7"
            android:orientation="vertical"
            android:background="@color/white"
            android:layout_margin="10dp">
          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/lianxi"
              android:textColor="@color/text"
              android:textSize="@dimen/text_middle"
              android:layout_marginLeft="10dp"
              android:layout_marginTop="10dp"
              />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="7dp"
                android:layout_marginLeft="40dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tell"
                    android:textSize="@dimen/text_small"
                    android:textColor="@color/addres"
                    />
                <TextView
                    android:id="@+id/tell_s"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tell2"
                    android:layout_marginLeft="2dp"
                    android:textColor="#179cff"
                    android:textSize="@dimen/text_small"
                    />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/content"
                android:textColor="@color/addres"
                android:textSize="@dimen/text_small"
                android:layout_marginLeft="40dp"
                />
            <TextView
                android:textColor="@color/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shangwu"
                android:layout_marginLeft="10dp"
                android:textSize="@dimen/text_middle"
                android:layout_marginTop="20dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/content2"
                android:textColor="@color/addres"
                android:layout_marginTop="7dp"
                android:textSize="@dimen/text_small"
                android:layout_marginLeft="40dp"
                />
            <TextView
                android:textColor="@color/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/genduo"
                android:textSize="@dimen/text_middle"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/content3"
                android:textColor="@color/addres"
                android:textSize="@dimen/text_small"
                android:layout_marginTop="7dp"
                android:layout_marginLeft="40dp"
                />


        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"></View>


    </LinearLayout>

</LinearLayout>